--- a/about.html
+++ b/about.html
@@ -3,9 +3,207 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>about page</title>
+    <title>Knowledge Villa || About</title>
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
+    <!-- font-awesome -->
+    <link
+      rel="stylesheet"
+      href="./fontawesome-free-5.12.1-web/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!-- css -->
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <h1>about page</h1>
+    <!-- navbar -->
+    <nav class="nav" id="nav">
+      <div class="nav-center">
+        <!-- nav header -->
+        <div class="nav-header">
+          <div class="nav-logo">
+            <h3>Knowledge <span>Villa</span></h3>
+          </div>
+          <button class="nav-btn" id="nav-btn">
+            <i class="fas fa-bars"></i>
+          </button>
+        </div>
+        <!-- end of nav header -->
+        <!-- nav-links -->
+        <ul class="nav-links">
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+          <li>
+            <a href="courses.html">Courses</a>
+          </li>
+          <li>
+            <a href="events.html">Events</a>
+          </li>
+          <li>
+            <a href="about.html">About</a>
+          </li>
+          <li>
+            <a href="contact.html">Contact</a>
+          </li>
+        </ul>
+        <!-- end of nav-links -->
+      </div>
+    </nav>
+    <!-- end of navbar -->
+    <!-- sidebar -->
+    <aisde class="sidebar" id="sidebar">
+      <div>
+        <button class="close-btn" id="close-btn">
+          <i class="fas fa-times"></i>
+        </button>
+        <!-- sidebar-links -->
+        <ul class="sidebar-links">
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+          <li>
+            <a href="courses.html">Courses</a>
+          </li>
+          <li>
+            <a href="events.html">Events</a>
+          </li>
+          <li>
+            <a href="about.html">About</a>
+          </li>
+          <li>
+            <a href="contact.html">Contact</a>
+          </li>
+        </ul>
+        <!-- end of sidebar-links -->
+        <!-- social icons -->
+        <ul class="social-icons">
+          <li>
+            <a href="#" class="social-icon">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="social-icon">
+              <i class="fab fa-youtube"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="social-icon">
+              <i class="fab fa-linkedin"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="social-icon">
+              <i class="fab fa-twitter"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="social-icon">
+              <i class="fab fa-facebook"></i>
+            </a>
+          </li>
+        </ul>
+        <!-- end of social icons -->
+      </div>
+    </aisde>
+    <!-- end of sidebar -->
+    <!-- about -->
+    <section class="section about-page">
+      <!-- section title -->
+      <div class="section-title ratings-title">
+        <h2>About Us</h2>
+        <div class="underline"></div>
+      </div>
+      <!-- end of section title -->
+      <div class="section-center page-info">
+        <p>
+          <b>Knowledge Villa</b> is a leading provider of technical courses
+          aimed at empowering individuals with the skills and knowledge needed
+          to excel in today's rapidly evolving technological landscape. With a
+          commitment to excellence and innovation, we strive to bridge the gap
+          between theoretical learning and practical application through our
+          comprehensive course offerings.
+        </p>
+
+        <p>
+          At <b>Knowledge Villa</b>, we understand the importance of staying
+          ahead in the competitive field of technology. That's why we offer a
+          diverse range of courses covering various technical domains, including
+          but not limited to programming languages, software development, data
+          science, cybersecurity, artificial intelligence, and more.
+        </p>
+        <p>
+          Our courses are meticulously designed and regularly updated to ensure
+          that our students receive the most relevant and up-to-date education
+          possible. What sets <b>Knowledge Villa</b> apart is our focus on
+          hands-on learning and real-world projects. We believe that practical
+          experience is key to mastering technical skills, which is why our
+          courses are structured to include ample opportunities for students to
+          apply their knowledge in simulated environments and real-life
+          scenarios.
+        </p>
+        <p>
+          Our instructors are industry experts with years of experience,
+          dedicated to providing personalized guidance and support to help our
+          students succeed. Whether you're a beginner looking to kickstart your
+          career in tech or a seasoned professional seeking to expand your skill
+          set, <b>Knowledge Villa</b> has something for everyone.
+        </p>
+        <p>
+          Our flexible learning options, including online courses and
+          instructor-led training, allow you to learn at your own pace and
+          according to your schedule. Join us at <b>knowledge Villa</b> and take
+          the first step towards a successful and rewarding career in
+          technology. Let us help you unlock your full potential and achieve
+          your goals in the dynamic world of tech. Empower yourself with
+          knowledge.
+        </p>
+        <p>Choose <b>Knowledge Villa</b> for your technical education needs.</p>
+        <div class="section-btn">
+          <a href="courses.html" class="btn">Enroll Now</a>
+        </div>
+      </div>
+    </section>
+    <!-- end of about -->
+    <!-- footer -->
+    <footer class="footer">
+      <!-- social icons -->
+      <ul class="social-icons">
+        <li>
+          <a href="#" class="social-icon">
+            <i class="fab fa-instagram"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#" class="social-icon">
+            <i class="fab fa-youtube"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#" class="social-icon">
+            <i class="fab fa-linkedin"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#" class="social-icon">
+            <i class="fab fa-twitter"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#" class="social-icon">
+            <i class="fab fa-facebook"></i>
+          </a>
+        </li>
+      </ul>
+      <!-- end of social icons -->
+      <p>&copy; <span id="date"></span> Knowledge Villa. all rights reserved</p>
+    </footer>
+    <script src="./js/app.js"></script>
   </body>
 </html>
