course page completed

--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
     </aisde>
     <!-- end of sidebar -->
     <!-- about -->
-    <section class="section about-page">
+    <section class="section single-page">
       <!-- section title -->
       <div class="section-title ratings-title">
         <h2>About Us</h2>
