--- a/courses.html
+++ b/courses.html
@@ -113,17 +113,116 @@
       </div>
     </aisde>
     <!-- end of sidebar -->
-    <!-- ######## -->
-    <!-- ######## -->
-    <!-- section title -->
-    <div class="section-title ratings-title">
-      <h2>Pathway of excellence</h2>
-      <div class="underline"></div>
-    </div>
-    <!-- end of section title -->
-    <!-- ######## -->
-    <!-- ######## -->
-    <!-- ######## -->
+
+    <header class="courses-hero">
+      <!-- section title -->
+      <div class="section-title ratings-title">
+        <h2>Our Courses</h2>
+        <div class="underline"></div>
+      </div>
+      <!-- end of section title -->
+    </header>
+    <section class="section">
+      <div class="section-center courses-page-center">
+        <!-- single Course -->
+        <article class="single-course">
+          <div class="course-container">
+            <img src="./images/web-d.jpg" alt="" />
+            <a href="" class="course-icon">
+              <i class="fas fa-code"></i>
+            </a>
+          </div>
+          <div class="course-details">
+            <h4>Web Development</h4>
+            <p>
+              Our Web Development Course provides a condensed yet thorough
+              introduction to creating modern and interactive websites. Led by
+              industry professionals, this hands-on course covers essential
+              skills such as HTML, CSS, JavaScript, and responsive design
+              principles. Join us to kickstart your journey in web development.
+            </p>
+          </div>
+          <div class="course-footer section-btn">
+            <a href="" class="btn">Course Details</a>
+          </div>
+        </article>
+        <!--end of single Course -->
+        <!-- single Course -->
+        <article class="single-course">
+          <div class="course-container">
+            <img src="./images/data-sci.jpg" alt="" />
+            <a href="" class="course-icon">
+              <i class="fa fa-cube"></i>
+            </a>
+          </div>
+          <div class="course-details">
+            <h4>Data Science</h4>
+            <p>
+              Our Data Science Course offers a concise yet comprehensive
+              exploration of the field, providing essential skills and knowledge
+              needed to excel in data analysis and interpretation. Led by
+              seasoned professionals, this hands-on course covers key topics
+              including data manipulation, statistical analysis, machine
+              learning, and data visualization. Join us to dive into the
+              exciting world of data science.
+            </p>
+          </div>
+          <div class="course-footer section-btn">
+            <a href="" class="btn">Course Details</a>
+          </div>
+        </article>
+        <!--end of single Course -->
+        <!-- single Course -->
+        <article class="single-course">
+          <div class="course-container">
+            <img src="./images/cyber.jpg" alt="" />
+            <a href="" class="course-icon">
+              <i class="fa fa-shield-halved"></i>
+            </a>
+          </div>
+          <div class="course-details">
+            <h4>Cyber Security</h4>
+            <p>
+              Our Cybersecurity Course delivers a condensed yet comprehensive
+              overview of cybersecurity fundamentals, equipping students with
+              essential knowledge and skills to protect digital assets
+              effectively. Led by industry experts, this hands-on course covers
+              topics such as network security, cryptography, ethical hacking,
+              and incident response. Join us to safeguard digital environments
+              with confidence.
+            </p>
+          </div>
+          <div class="course-footer section-btn">
+            <a href="" class="btn">Course Details</a>
+          </div>
+        </article>
+        <!--end of single Course -->
+        <!-- single Course -->
+        <article class="single-course">
+          <div class="course-container">
+            <img src="./images/ai.jpg" alt="" />
+            <a href="" class="course-icon">
+              <i class="fa-solid fa-robot"></i>
+            </a>
+          </div>
+          <div class="course-details">
+            <h4>artificial intelligence</h4>
+            <p>
+              Our AI Course offers a concise yet thorough overview of artificial
+              intelligence, covering key concepts like machine learning, neural
+              networks, and natural language processing. Led by industry
+              experts, this hands-on course equips students with essential
+              skills to excel in this dynamic field. Join us to explore the
+              exciting world of AI and unlock new opportunities in technology.
+            </p>
+          </div>
+          <div class="course-footer section-btn">
+            <a href="" class="btn">Course Details</a>
+          </div>
+        </article>
+        <!--end of single Course -->
+      </div>
+    </section>
     <!-- footer -->
     <footer class="footer">
       <!-- social icons -->
